// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Menu render 1`] = `
<Fragment>
  <Menu__Wrapper>
    <ContextConsumer>
      <Component />
    </ContextConsumer>
  </Menu__Wrapper>
  <Menu__Wrapper>
    <SideNav
      chat={
        <div>
          chat
        </div>
      }
      debug={
        <div>
          debug
        </div>
      }
      inverted={false}
      onOpenRegister={[Function]}
      onOpenSignIn={[Function]}
      onSaveLanguage={[MockFunction]}
      onSetModal={[MockFunction]}
      portal=""
      subscription={
        <div>
          subscription
        </div>
      }
    />
  </Menu__Wrapper>
</Fragment>
`;

exports[`#Menu render with forgot password modal 1`] = `
<Fragment>
  <Menu__Wrapper>
    <ContextConsumer>
      <Component />
    </ContextConsumer>
  </Menu__Wrapper>
  <Menu__Wrapper>
    <SideNav
      chat={
        <div>
          chat
        </div>
      }
      debug={false}
      inverted={false}
      onOpenRegister={[Function]}
      onOpenSignIn={[Function]}
      onSaveLanguage={[MockFunction]}
      onSetModal={
        [MockFunction] {
          "calls": Array [
            Array [
              "forgotPassword",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      portal=""
      subscription={
        <div>
          subscription
        </div>
      }
    />
  </Menu__Wrapper>
  <CloseByKey
    closeKey="Escape"
    onClose={[Function]}
  >
    <Portal
      element=""
    >
      <Modal
        onClose={[Function]}
        size="normal"
      >
        <ModalSection>
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </ModalSection>
      </Modal>
    </Portal>
  </CloseByKey>
</Fragment>
`;

exports[`#Menu render with modal 1`] = `
<Fragment>
  <Menu__Wrapper>
    <ContextConsumer>
      <Component />
    </ContextConsumer>
  </Menu__Wrapper>
  <Menu__Wrapper>
    <SideNav
      chat={
        <div>
          chat
        </div>
      }
      debug={false}
      inverted={false}
      onOpenRegister={[Function]}
      onOpenSignIn={[Function]}
      onSaveLanguage={[MockFunction]}
      onSetModal={
        [MockFunction] {
          "calls": Array [
            Array [
              "myBooking",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      portal=""
      subscription={
        <div>
          subscription
        </div>
      }
    />
  </Menu__Wrapper>
  <CloseByKey
    closeKey="Escape"
    onClose={[Function]}
  >
    <Portal
      element=""
    >
      <Modal
        onClose={[Function]}
        size="normal"
      >
        <ModalSection>
          <Login
            onCloseSuccess={[Function]}
            onOpenForgotPassword={[Function]}
            onOpenMyBooking={[Function]}
            onOpenRegister={[Function]}
            onOpenSignIn={[Function]}
            open="myBooking"
          />
        </ModalSection>
      </Modal>
    </Portal>
  </CloseByKey>
</Fragment>
`;
